# movement

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml  citation_check.yml  test_core.yml  test_coverage.yml  test_demos.yml  test_laplacian_smoothing.yml  test_monge_ampere.yml  test_spring.yml  test_suite.yml  test_suite_main.yml  test_suite_release.yml
demos/: bubble_shear.py  demo_references.bib  l.geo  l.msh  l_convex.geo  l_convex.msh  laplacian_smoothing.py  lineal_spring.py  mesh-with-hole.geo  mesh-with-hole.msh  monge_ampere1.py  monge_ampere_3d.py  monge_ampere_bubble_shear.py  monge_ampere_cyl.py  monge_ampere_helmholtz.py  monge_ampere_l.py  monge_ampere_periodic.py  monge_ampere_ring.py  monge_ampere_sinfun3.py  monge_ampere_torus.py
movement/: __init__.py  elasticity.py  laplacian.py  laplacian_smoothing.py  math.py  mesh_mover.py  monge_ampere.py  monitor.py  monitor_smoother.py  mover.py  solver_parameters.py  spring.py  tangling.py
notebooks/: Lineal-Spring.ipynb  Monge-Ampere.ipynb  plotting.py
test/: Makefile  conftest.py  monitors.py  test_demos.py  test_forced_movement.py  test_laplacian_smoothing.py  test_math.py  test_monge_ampere.py  test_monitor.py  test_smoothing.py  test_spring.py  test_tangling.py  to_test.sh
test/data/: forced_mesh_laplacian.npy  forced_mesh_lineal_4.npy
