[build-system]
requires = ["setuptools"]

[project]
name = "movement"
version = "0.2"
authors = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Stephan C. Kramer"},
  {name = "Mingrui Zhang"},
  {name = "Davor Dundovic"},
]
maintainers = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Stephan C. Kramer"},
  {name = "Mingrui Zhang"},
]
description = "Mesh movement methods for finite element problems solved using Firedrake"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "meshing", "finite-element-method", "firedrake"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python",
]
dependencies = [
  "sympy",
  "vtk",
]

[project.optional-dependencies]
dev = [
  "cffconvert",
  "parameterized",
  "pre-commit",
  "pytest",
  "ruff",
]

[project.urls]
Homepage = "https://mesh-adaptation.github.io"
Documentation = "https://mesh-adaptation.github.io/movement/index.html"
Repository = "https://github.com/mesh-adaptation/movement"

[tool.setuptools]
packages = ["movement"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # mccabe complexity
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
[tool.ruff.lint.per-file-ignores]
"demos/*" = [
  "E402",  # module level import not at top of file
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:`np.bool8` is a deprecated alias for `np.bool_`*:DeprecationWarning",
	"ignore:unable to find git revision*:UserWarning",
]
